--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,3 +60,8 @@
 .scrolled {
     background-color: rgba(0, 0, 0, 0.6) !important;
 }
+.card:hover {
+    transform: translateY(-5px);
+    transition: 0.3s ease-in-out;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
